[metadata]
name = graphenelib
description = Python library for graphene-based blockchains
description_file = README.md
author = Fabian Schuh
author_email = Fabian@chainsquad.com
maintainer = Fabian Schuh
maintainer_email = Fabian@chainsquad.com
url = https://github.com/xeroc/python-graphenelib
keywords =
    graphene
    api
    rpc
    ecdsa
    secp256k1
# See https://pypi.org/classifiers/
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Version Control :: Git
[options]
python_requires = >= 3.6
packages = find:
setup_requires =
   pytest-runner

[aliases]
test=pytest

[coverage:run]
source=graphenebase,grapheneapi,graphenestorage,graphenecommon
omit=
   tests/*
   .tox/*
   .eggs/*

[coverage:report]
include=graphene*
ignore_errors=True
show_missing=True
omit =
   # This file is proven and won't be touch
   grapheneapi/grapheneapi.py
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    if settings.DEBUG
    raise ImportError
    raise AssertionError
    raise NotImplementedError
    except ImportError:
    if 0:
    if __name__ == .__main__.:
    if sys.version > '3':
    SECP256K1_MODULE

[flake8]
select = C,E,F,W,B,B950
ignore = E501,F401,E203,W503
exclude =
    # No need to traverse our git directory
    .git,
    # There's no value in checking cache directories
    __pycache__,
    # The conf file is mostly autogenerated, ignore it
    docs/conf.py,
max-complexity = 15
max-line-length = 88

[isort]
atomic=true
lines_after_imports = 2
lines_between_types = 1
multi_line_output = 3
line_length = 88
known_third_party =
include_trailing_comma = true

[nosetests]
verbosity=3
nocapture=1
nologcapture=1
cover-xml=1
with-coverage=1
with-xunit=1

[semantic_release]
version_variable = setup.py:__version__
upload_to_repository = true
